# OptionWorkstation

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  Makefile  NOTICE  README.en.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  compose.yaml  deny.toml  pytest.ini
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug.yml  data-quality.yml  feature.yml
.github/workflows/: ci.yml  container.yml  dependency-review.yml  security-audit.yml
backend/: README.md  __init__.py  app.py  requirements-dev.txt  requirements.txt
docs/: ARCHITECTURE.md  DATA_SOURCES.md  DEVELOPMENT.md  ENGINEERING_STANDARDS.md  EXAMPLE_DATA.md  MODEL_LIMITATIONS.md  RELEASE_CHECKLIST.md  THREAT_MODEL.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: guide.html
frontend/src/: App.jsx  styles.css
frontend/src/components/: AuditPanel.jsx  ChainTable.jsx  Chart.jsx  ExecutionPanel.jsx  Primitives.jsx  StrategyWorkbench.jsx  SurfaceChart.jsx
frontend/src/lib/: api.js
rust-backend/: Cargo.toml
rust-backend/src/: analytics.rs  audit.rs  live.rs  main.rs  models.rs  replay.rs  strategy.rs  volatility.rs
scripts/: browser-smoke.mjs  guide-smoke.mjs  license-inventory.mjs  live-switch-smoke.mjs  materialize-example-data.sh  publication-check.sh  smoke-test.sh  start.sh  verify.sh
tests/: test_api.py  test_legacy_smoke.py
